--- a/main.html
+++ b/main.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-
 <html>
-
+	
 <head>
 	<link rel="stylesheet" href="styles.css">
-</head>
-
+</head>	
+	
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<div>
+		My current favourite song is <a href="https://www.youtube.com/watch?v=9QpmsrYO4cc&list=RD9QpmsrYO4cc&start_radio=1">Tainu Khabar Nahi</a>
+	</div>
 </body>
-
+	
 </html>
